# realtime-server-library

./: .gitignore  .gitmodules  CMakeLists.txt  connecting.drawio  readme.md
include/rtserver/: AutoMap.hpp  ClientSocket.hpp  EventHandler.hpp  Game.hpp  LambdaMap.hpp  PackageFromPlayer.hpp  PackageStructs.hpp  RealtimeServer.hpp  StreamList.hpp
src/: CMakeLists.txt  ClientSocket.cpp  EventHandler.cpp  Game.cpp  PackageFromPlayer.cpp  RealtimeServer.cpp
